--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -16,6 +16,8 @@ jobs:
         uses: actions/checkout@v4.2.2
       - name: Install Dagger CLI
         run: cd /usr/local && { curl -L https://dl.dagger.io/dagger/install.sh | sh; cd -; }
+      - name: Environment infos
+        run: env | sort
       - name: Display Helm module functions
         run: dagger functions
       - name: Dagger renovate
