GitHub secret as env

--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -21,6 +21,8 @@ jobs:
       - name: Display Helm module functions
         run: dagger functions
       - name: Dagger renovate
+        env:
+          MY_GH_WRITE_PAT: ${{ secrets.MY_GH_WRITE_PAT }}
         run: |
           dagger call git-hub \
               --config ./config/config.json5 \
