add more secrets

--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -22,6 +22,7 @@ jobs:
         run: dagger functions
       - name: Dagger renovate
         env:
+          MY_GH_PAT: ${{ secrets.MY_GH_PAT }}
           MY_GH_WRITE_PAT: ${{ secrets.MY_GH_WRITE_PAT }}
         run: |
           dagger call git-hub \
