--- a/config/config.json5
+++ b/config/config.json5
@@ -35,7 +35,7 @@
       {
         "matchDepNames": ["dagger/dagger"],
         "branchPrefix": "renovate/",
-        "commitMessagePrefix": "{{packageFileDir}} - ",
+        "commitMessagePrefix": "Module {{packageFileDir}} - ",
         "additionalBranchPrefix": "{{packageFileDir}}-", // one PR for every module inside the repo
         "postUpgradeTasks": {
           "commands": [
