--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -22,12 +22,15 @@ jobs:
         uses: actions/checkout@v4.2.2
       - name: Install Dagger CLI
         run: cd /usr/local && { curl -L https://dl.dagger.io/dagger/install.sh | sh; cd -; }
+      - name: Info
+        run: |
+          ls -la *
       - name: Dagger renovate
         run: |
           dagger \
               call \
                 git-hub \
-                  --config ./config/config.json5 \
+                  --config config/config.json5 \
                   --github-read-token env:AUTH_TOKEN \
                   --github-write-token env:AUTH_TOKEN \
                   --renovate-repositories "[\"${GITHUB_REPOSITORY}\"]" \
