--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -34,4 +34,5 @@ jobs:
                 --github-read-token env:AUTH_TOKEN \
                 --github-write-token env:AUTH_TOKEN \
                 --renovate-repositories "['${GITHUB_REPOSITORY}']" \
+                --show-debug-logs \
                 --docker-sock /var/run/docker.sock
