fix root module renovation, fixes #2

--- a/config/config.json5
+++ b/config/config.json5
@@ -5,7 +5,7 @@
   // TODO: move to internal config?
   "allowedCommands": [
     "^curl -fsSL https://dl.dagger.io/dagger/install.sh | DAGGER_VERSION=.* BIN_DIR=/tmp/ sh$",
-    "^/tmp/dagger -m .* develop$"
+    "^/tmp/dagger -m ./.* develop$"
   ],
   "customManagers": [
     {
@@ -44,7 +44,7 @@
       "postUpgradeTasks": {
         "commands": [
           "curl -fsSL https://dl.dagger.io/dagger/install.sh | DAGGER_VERSION={{newVersion}} BIN_DIR=/tmp/ sh",
-          "/tmp/dagger -m {{packageFileDir}} develop"
+          "/tmp/dagger -m ./{{packageFileDir}} develop"
         ],
         // TODO "fileFilters": ["{{packageFileDir}}/**/*.*"], ?
         "fileFilters": [
